# fikzPy

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP_CLASSIC_SEMANTIC.md  pyproject.toml  requirements.txt
Avaliar/: preprocessor.py  tikz_generator.py  tracer.py
docs/: adaptive_preprocessing.md  centerline_pipeline.md  classic_explicit_strategies.md  classic_lineart_balanced_refinement.md  classic_lineart_refinement.md  classic_pipeline_audit.md  classic_semantic_integration.md  development.md  geometry_optimization.md  image_classifier.md  index.md  primitive_fitting.md  raster_tracers.md  semantic_geometry_model.md  semantic_tikz_exporter.md  svg_semantic_parser.md  usage.md  vector_pipeline_debug.md  visual_classic_branch_integration.md  visual_validation_score.md
examples/: example_output.tex
fikzpy/: __init__.py  main.py
installer/: README.md  fikzPy.bat  fikzpy.iss  info_criacao.txt  instalar_dependencias.bat  requirements-runtime.txt
scripts/: build_exe.py  deploy_docs.py  generate_classic_baseline.py  generate_classic_lineart_balanced_refinement_report.py
tests/: NewTikzfile.tex  test_adaptive_preprocessing.py  test_bezier_fit.py  test_centerline_pipeline.py  test_classic_baseline.py  test_classic_lineart_balanced_refinement.py  test_classic_semantic_pipeline.py  test_contour_cleaning.py  test_contour_detector.py  test_contour_merging.py  test_contour_smoothing.py  test_geometry_optimization.py  test_gui_preview_pipeline.py  test_image_classifier.py  test_preprocessing.py  test_primitive_detection.py  test_primitive_fitting.py  (+14 more)
(+94 files in other folders)
